@@ -230,5 +230,7 @@
         <string id="33328">This trancoding features needs makemkv !</string>        
         <string id="33329">No connection to network-master possible !</string>
         <string id="33330">No connection fromm a client was made !</string>
+        <string id="33331">IPHONE-directory not found or writeable !</string> 
+        <string id="33332">PSP-directory not found or writeable !</string>
                
  </strings>
